Make GitHub link bold

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             Recursively verifiable<br/>
             STARKs for everyone.
         </p>
-        <a href="https://github.com/TritonVM/triton-vm" style="background-color: #559EFA; color: #191919; align-self: center; text-align: center; justify-items: center; font-size: 20px; padding: 10px; border-radius: 5px; text-decoration: none;">
+        <a href="https://github.com/TritonVM/triton-vm" style="background-color: #559EFA; color: #191919; align-self: center; text-align: center; font-weight: bold; font-size: 20px; padding: 10px; border-radius: 5px; text-decoration: none;">
             <img src="img/GitHub-Mark.svg" alt="GitHub Logo" height="20px" style="margin-bottom: -1px">
             GitHub
         </a>
