Add link to specification

--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,16 @@
             Recursively verifiable<br/>
             STARKs for everyone.
         </p>
-        <a href="https://github.com/TritonVM/triton-vm" style="background-color: #559EFA; color: #191919; align-self: center; text-align: center; font-weight: bold; font-size: 20px; padding: 10px; border-radius: 5px; text-decoration: none;">
-            <img src="img/GitHub-Mark.svg" alt="GitHub Logo" height="20px" style="margin-bottom: -1px">
-            GitHub
-        </a>
+        <div style="display: flex; justify-content: center; align-items: center">
+            <a href="https://github.com/TritonVM/triton-vm" style="background-color: #559EFA; color: #191919; align-self: center; text-align: center; font-weight: bold; font-size: 20px; padding: 10px; margin-right: 10px; border-radius: 5px; text-decoration: none;">
+                <img src="img/GitHub-Mark.svg" alt="GitHub Logo" height="20px" style="margin-bottom: -1px">
+                GitHub
+            </a>
+            <a href="https://triton-vm.org/spec/" style="background-color: #559EFA; color: #191919; align-self: center; text-align: center; font-weight: bold; font-size: 20px; padding: 10px; margin-left: 10px; border-radius: 5px; text-decoration: none;">
+                <img src="img/mdbook.svg" alt="mdBook Logo" height="20px" style="margin-bottom: -2px">
+                Spec
+            </a>
+        </div>
     </div>
 </div>
 </body>
