--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <h1 style="color: #559EFA; font-size: 60px; margin: 0">Triton VM</h1>
         <p style="color: #87FAFF; font-size: 30px">
             Recursively verifiable<br/>
-            STARKs for everyone.
+            STARKs for Triton VM.
         </p>
         <div style="display: flex; justify-content: center; align-items: center">
             <a href="https://github.com/TritonVM/triton-vm" style="background-color: #559EFA; color: #191919; align-self: center; text-align: center; font-weight: bold; font-size: 20px; padding: 10px; margin-right: 10px; border-radius: 5px; text-decoration: none;">
