misc: Use relative path for spec

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img src="img/GitHub-Mark.svg" alt="GitHub Logo" height="20px" style="margin-bottom: -1px">
                 GitHub
             </a>
-            <a href="https://triton-vm.org/spec/" class="button">
+            <a href="./spec/" class="button">
                 <img src="img/mdbook.svg" alt="mdBook Logo" height="20px" style="margin-bottom: -2px">
                 Spec
             </a>
